--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/modal": "^2.2.23",
     "@heroui/navbar": "^2.2.24",
     "@heroui/react": "^2.8.4",
+    "@heroui/spinner": "^2.2.23",
     "@heroui/system": "^2.4.22",
     "@heroui/theme": "^2.4.22",
     "@hookform/resolvers": "^5.2.2",
@@ -26,15 +27,17 @@
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.18",
+    "jwt-decode": "^4.0.0",
     "next": "15.5.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "prisma": "^6.16.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "telegraf": "^4.16.3",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
